istio-bookinfo/bookinfo/network/vs-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  # 故障注入
  - fault:
      delay:
        fixedDelay: 7s
        percentage:
          value: 100
    # 请求头匹配
    match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v1
